--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <header class="text-center mt-5">
-       <h2>Piano</h2>
+       <h2>Piano para mi peke</h2>
     </header>
 
     <main class="text-center">
